# tensorflow_lite_ae_example

./: .clang-format  .gitignore  Makefile  deploy.cpp  generate.cpp  train.py
tflite/: CMakeLists.txt  main.cpp
